infra/k8s/overlays/prod/dusk/patches/replicas.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nightfall
spec:
  replicas: 3
  template:
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution: null
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: kubernetes.io/hostname
              labelSelector:
                matchLabels:
                  app.kubernetes.io/name: nightfall
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dawn
spec:
  replicas: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twilight
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vector
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-collector
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: clickhouse
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: clickhouse-keeper
spec:
  replicas: 3
