infra/k8s/overlays/prod/dusk/patches/signoz.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signoz-otel-collector
spec:
  template:
    spec:
      containers:
        - name: collector
          volumeMounts:
            - name: kafka
              mountPath: /var/run/kafka
              readOnly: true
      volumes:
        - name: kafka
          projected:
            defaultMode: 0444
            sources:
              - secret:
                  name: signoz
                  items:
                    - key: user.crt
                      path: user.crt
                    - key: user.key
                      path: user.key
              - secret:
                  name: dusk-cluster-ca-cert
                  items:
                    - key: ca.crt
                      path: ca.crt
